# simple-bio-search-engine

./: README.md  hashtable.py  myset.py  output.json  output.py  parse.py  parsed_words.txt  pyproject.toml  requirements.txt  titles.txt  todo.md  tokenizer.py
notes/: admin.md  baseconvo.md  searchalgo.md  searchhash.md  searchtime.md  todo1.md  value.md  wordcount.md
